# portfolio_app_v1

./: .gitignore  README.md  README_FRONTEND.md  build.spec  config.json  entrypoint.py  investment.db  pyproject.toml  requirements.txt
docs/: ARCHITECTURE_AND_LOCAL_APP.md  CSV_IMPORT_EXPORT_DESIGN.md  CSV_IMPORT_EXPORT_FRONTEND.md  IMPLEMENTATION_TODOS.md  NET_VALUE_CURVE_DESIGN.md  NET_VALUE_CURVE_TESTING.md  NET_VALUE_CURVE_USER_GUIDE.md  Overview_window_design.md  PACKAGING_PLAN.md  PORTFOLIO_QUOTES_DESIGN.md  PORTFOLIO_SUMMARY_DESIGN.md  PORTFOLIO_SUMMARY_FRONTEND.md  TRANSACTION_VALIDATION_AND_SELL_DESIGN.md
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
scripts/: build_macos.sh  generate_test_data.py  generate_test_data_advanced.py  run_all_tests.py  run_all_tests.sh  start_app.sh  start_backend.sh  start_frontend.sh
src/app/: __init__.py  app_context.py  db.py  main.py  main_desktop.py
src/data/: account.py  enum.py  transaction.py
src/service/: account_service.py  csv_transaction.py  enums.py  historical_price_service.py  net_value_service.py  portfolio_service.py  quote_service.py  transaction_service.py  util.py
src/tests/: README.md  __init__.py  conftest.py  test_account_service.py  test_csv_transaction.py  test_historical_price_service.py  test_main_api.py  test_net_value_api.py  test_net_value_edge_cases.py  test_net_value_integration.py  test_net_value_performance.py  test_net_value_service.py  test_portfolio_service.py  test_quote_service.py  test_transaction_service.py
src/utils/: exceptions.py
tests/: conftest.py  test_placeholder.py
tests/api/: __init__.py  test_accounts_api.py  test_analysis_api.py  test_transactions_api.py
tests/integration/: __init__.py  test_rebuild_triggers.py  test_repositories_sqlite.py
tests/specs/: given_when_then.md
tests/unit/: __init__.py  test_analysis_service.py  test_csv.py  test_ledger_service.py  test_market_data_service.py  (+1 more)
(+90 files in other folders)
