[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investment-app"
version = "0.1.0"
description = "Local-first investment management and tracking application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.25",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
# Desktop UI (default for local app)
desktop = [
    "matplotlib>=3.8.0",
]
# API server (optional, for testing or API access)
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]
# Development dependencies
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]
# All dependencies (for packaging)
all = [
    "investment-app[desktop,api,dev]",
]

[project.scripts]
investment-app = "app.main_desktop:main"

[project.gui-scripts]
investment-app-gui = "app.main_desktop:main"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
